# JuliaCollider

./: .gitignore  .gitmodules  CALL_NOTES.txt  CMakeLists.txt  GC_NOTES.txt  INCLUDE_CRASHES_NOTES.txt  Julia.cpp  Julia.sc  JuliaAsyncIO.sc  JuliaFuncs.hpp  JuliaHash.hpp  JuliaProxyTest.sc  JuliaTest-no-threads.sc  JuliaUtilities.h  LOAD_METHODS_NOTES.txt  NEXT THINGS.txt  NOTES.txt  ProposedSyntax.sc  README.md  SUPERNOVA.txt  Sine_DSP.jl  build_install.sh  build_install_generic.sh  build_install_native.sh  build_script.sh
NOTES/: GC_NOTES.txt  NEXT THINGS.txt  NOTES.txt  SUPERNOVA.txt
include/: gmp.h
include/julia/: julia_version.h
include/llvm/Analysis/: ScalarEvolution.h  ScalarEvolutionExpressions.h
include/llvm/CodeGen/: SelectionDAGNodes.h
include/llvm/Config/: AsmPrinters.def  Disassemblers.def
include/llvm/ExecutionEngine/: JITEventListener.h
julia/JuliaCollider/: Sine_DSP.jl
julia/include/julia/: uv.h
julia/include/llvm/Analysis/: ScalarEvolutionExpander.h
julia/include/llvm/Config/: AsmParsers.def  Targets.def  abi-breaking.h  llvm-config.h
julia/include/llvm/IR/: Intrinsics.gen
julia/lib/: BugpointPasses.dylib  LLVMHello.dylib  libLTO.dylib  libamd.dylib  libcamd.dylib  libccalltest.dylib  libccolamd.dylib  libcholmod.dylib  libcolamd.dylib  libcurl.4.dylib  libcurl.la  libdSFMT.dylib  libgit2.0.27.2.dylib  libgit2.27.dylib  libgit2.dylib  libgmp.10.dylib  libjulia.1.0.dylib  libjulia.1.dylib  libmbedcrypto.0.dylib  libmbedcrypto.2.6.0.dylib  libmbedcrypto.dylib  libmbedtls.10.dylib  libmbedtls.2.6.0.dylib  libmbedtls.dylib  libmbedx509.0.dylib  libmbedx509.2.6.0.dylib  libmbedx509.dylib  libmpfr.6.dylib  libmpfr.la  libopenblas64_.dylib.REMOVED.git-id  libopenlibm.2.5.dylib  libopenlibm.dylib  libosxunwind.dylib  libpcre2-8.0.dylib  libpcre2-8.la  libpcre2-posix.2.dylib  libpcre2-posix.la  libspqr.dylib  libssh2.1.0.1.dylib  libsuitesparse_wrapper.dylib  (+5 more)
julia/lib/cmake/libssh2/: Libssh2Config-release.cmake
julia/lib/cmake/llvm/: HandleLLVMOptions.cmake  LLVMConfig.cmake  LLVMConfigVersion.cmake  LLVMExports-release.cmake  LLVMExports.cmake
julia/lib/julia/: sys-o.a.REMOVED.git-id  sys.dylib.REMOVED.git-id  sys.ji.REMOVED.git-id
julia/lib/julia/sys.dylib.dSYM/Contents/: Info.plist
julia/lib/libccalltest.dylib.tmp.dSYM/Contents/: Info.plist
julia/lib/libccalltest.dylib.tmp.dSYM/Contents/Resources/DWARF/: libccalltest.dylib.tmp
julia/lib/libjulia.1.0.dylib.dSYM/Contents/: Info.plist
julia/lib/pkgconfig/: libcurl.pc  libgit2.pc  libpcre2-8.pc  libpcre2-posix.pc  libssh2.pc  libuv.pc  mpfr.pc  openlibm.pc
src/: GlobalVariables.cpp  GlobalVariables.h  Julia.cpp  Julia.sc  JuliaAsyncCmds.hpp  JuliaAtomicBarrier.cpp  JuliaAtomicBarrier.h  JuliaCollider.cpp  JuliaFuncs.hpp  JuliaGlobalIdDict.cpp  JuliaGlobalIdDict.h  JuliaGlobalState.cpp  JuliaGlobalState.h  JuliaHash.hpp  JuliaObject.h  JuliaObjectCompiler.cpp  JuliaObjectCompiler.h  JuliaObjectsArray.cpp  JuliaObjectsArray.h  JuliaReplyCmds.cpp  JuliaReplyCmds.h  JuliaUtilities.hpp  JuliaUtilitiesMacros.hpp  RTClassAlloc.hpp  SCBuffer.cpp  SC_AllocPoolModified.cpp  SC_AllocPoolModified.h  SC_AllocPoolSafe.cpp  SC_AllocPoolSafe.h
src/Examples/: AnalogDelay.jl  DiodeLadder.jl  Granulator.jl  Interpolations.jl  KrajeskiMoog.jl  Phasor.jl  SVF.jl  Saw.jl  SimpleDelay.jl  Sine.jl
src/HelpSource/Classes/: Julia.schelp  JuliaDef.schelp  JuliaProxy.schelp
src/HelpSource/Overviews/: JuliaCollider.schelp
src/HelpSource/Tutorials/: JC_01_Introduction.schelp  JC_02_Julia_Syntax.schelp  JC_03_JuliaCollider_Syntax.schelp  JC_04_Inputs_Outputs.schelp  JC_05_Constructor_Perform.schelp  JC_06_Data.schelp  JC_07_Buffer.schelp  JC_08_Custom_Types.schelp  JC_08_Custom_Types_Functions_and_Modules.schelp  JC_09_Examples_1.schelp  JC_10_Examples_2.schelp
src/JuliaDSP/: Sine_DSP.jl  TestAlloc.jl
src/JuliaObjects/: SineWave.jl
